[package]
name = "corewlan-sys"
version = "0.1.0"
description = "FFI Bindings to MacOS's CoreWLAN framework."
keywords = ["ffi", "macos", "framework", "wlan"]
categories = ["external-ffi-bindings", "os", "os::macos-apis"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/thisjaiden/corewlan-sys/"
edition = "2021"
links = "CoreWLAN"

[dependencies]
objc = "0.2.7"
